# kalshi-mcp-server

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt
scripts/: export_kalshi_category_market_titles.py
src/kalshi_mcp/: __init__.py  kalshi_client.py  models.py  server.py  services.py  settings.py
src/kalshi_mcp/mcp/: __init__.py  handlers.py  resources.py  schema.py
tests/: __init__.py
tests/unit/: __init__.py  test_kalshi_client.py  test_kalshi_client_create_order.py  test_mcp_handlers.py  test_settings.py  test_stdio_server.py
